# smartbox-content-engine

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml  pyproject.toml  railway.toml
.claude/: settings.local.json
.claude/commands/: check-brand.md  run-dev.md  run-tests.md
backend/: CLAUDE.md  requirements.txt
backend/app/: config.py  main.py
backend/app/api/: generate.py  routes.py
backend/app/core/: csv_parser.py  dam_naming.py  pipeline.py
backend/app/models/: job.py  output.py  product.py
backend/app/prompts/: category_tones.py  content_prompt.py  system_prompt.py  video_template.py
backend/app/services/: claude_service.py  image_service.py  llm_router.py  ollama_service.py  openrouter_service.py  supabase_service.py  video_service.py
backend/app/utils/: exceptions.py  logger.py  sse.py
data/: sample_output.json  sample_products.csv
docker/: .dockerignore  Dockerfile
docs/: api_reference.md  architecture.md  brand_guidelines.md  product_summary.md  technical_architecture.md
frontend/: CLAUDE.md
frontend/src/: index.html
frontend/src/css/: components.css  main.css
frontend/src/js/: api.js  app.js  auth.js  ui.js  uploader.js
scripts/: run_local.sh  seed_data.py
tests/: conftest.py  test_csv_parser.py  test_dam_naming.py  test_pipeline.py  test_routes.py
